add components project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "paths": {
+      "components": [
+        "dist/components"
+      ],
       "contentSource": [
         "dist/content-source"
       ],
